# AllFinansApp

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  release.sh  req.txt  requirements.txt
config/: __init__.py
routes/: home.py
templates/: base.html
templates/pages/: home.html
utils/: __init__.py
