[tool.poetry]
name = "finansbot"
version = "0.1.0"
description = ""
authors = [
    "Victor <nilafe4@gmail.com>",
    "unuuunu <000llj7@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
loguru = "^0.6.0"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
